src/objects/Sign_Off__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sign_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Sign Off</relationshipLabel>
        <relationshipName>Sign_Off</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Date__c</fullName>
        <label>Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Type__c</fullName>
        <label>Sign Off Type</label>
        <picklist>
            <picklistValues>
                <fullName>BRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sign_Off__c</fullName>
        <label>Do you sign off on this step?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sign Off</label>
    <nameField>
        <displayFormat>SO-{000000000}</displayFormat>
        <label>Sign Off Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>